# RecallLens

./: .gitignore  README.en.md  README.md  README.zh-CN.md  pyproject.toml  requirements-clip.txt
backend/: __init__.py
backend/app/: __init__.py  analysis.py  config.py  database.py  embeddings.py  main.py  models.py  schemas.py  service.py  storage.py  vector_index.py
backend/tests/: test_api.py
frontend/: index.html  package.json
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
scripts/: seed_demo.py  smoke_api.py  smoke_backend.py
static/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
