[project]
name = "recalllens"
version = "0.1.0"
description = "Local-first natural language photo recall for everyday objects."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.34.0",
  "pillow>=11.0.0",
  "numpy>=2.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
